style: fix `GLOSSARY` color alignment with styles

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -84,7 +84,13 @@ h2 {
     }
 }
 
+// Description: Glossary Plugin
+dt.defined-term, a.term {
+    color: $accentColor;
+}
+
 // @parent-theme/components/SidebarLink.vue
+
 a.sidebar-link {
     color: $textColor;
 
