--- a/docs/.vuepress/theme/styles/themes/blue.styl
+++ b/docs/.vuepress/theme/styles/themes/blue.styl
@@ -1,6 +1,11 @@
 @import '../variables.styl';
 
 .sublime-theme-blue {
+	// Description: Glossary Plugin
+	dt.defined-term, a.term {
+	    color: $blueAccentColor;
+	}
+	
 	a,
 	p a code,
 	.theme-default-content a code {
